fix: fix yml file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,5 @@
+version: 0.2
+
 phases:
   pre_build:
     commands:
@@ -15,3 +17,5 @@ artifacts:
   base-directory: '.'
   files:
     - '**/*'
+image:
+  name: aws/codebuild/standard:5.0
