--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/server.ts",
-    "start": "node dist/server.js",
+    "start": "npm run build && node dist/server.js",
     "test": "bash report_load_test/generate_report.sh && xdg-open report_load_test/report.html"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "jest": "^29.5.0",
     "pg": "^8.10.0",
     "ts-jest": "^29.1.0"
